==> Bodmer/TFT_eSPI/Processors/TFT_eSPI_SAMD21.c <==

void TFT_eSPI::busDir(uint32_t mask, uint8_t mode)
{
  // mask is unused for generic processor
  // Arduino native functions suited well to a generic driver
  pinMode(TFT_D0, mode);
  pinMode(TFT_D1, mode);
  pinMode(TFT_D2, mode);
  pinMode(TFT_D3, mode);
  pinMode(TFT_D4, mode);
  pinMode(TFT_D5, mode);
  pinMode(TFT_D6, mode);
  pinMode(TFT_D7, mode);
  return;
}

uint8_t TFT_eSPI::readByte(void)
{
  uint8_t b = 0;

  busDir(0, INPUT);
  digitalWrite(TFT_RD, LOW);

  b |= digitalRead(TFT_D0) << 0;
  b |= digitalRead(TFT_D1) << 1;
  b |= digitalRead(TFT_D2) << 2;
  b |= digitalRead(TFT_D3) << 3;
  b |= digitalRead(TFT_D4) << 4;
  b |= digitalRead(TFT_D5) << 5;
  b |= digitalRead(TFT_D6) << 6;
  b |= digitalRead(TFT_D7) << 7;

  digitalWrite(TFT_RD, HIGH);
  busDir(0, OUTPUT);

  return b;
}

bool TFT_eSPI::initDMA(bool ctrl_cs) {
  if (DMA_Enabled) return false;
  zDMA.setTrigger(SERCOM0_DMAC_ID_TX);
  zDMA.setAction(DMA_TRIGGER_ACTON_BEAT);

  stat = zDMA.allocate();
  zDMA.setCallback(dmaCallback);

  DMAC->CHID.bit.ID = zDMA.getChannel();
  DMAC->CHINTENSET.reg = DMAC_CHINTENSET_TCMPL;
  zDMA.setPriority(DMA_PRIORITY_3);
  desc = zDMA.addDescriptor(
    NULL,                           // Source address (set later)
    (void *)&SERCOM0->SPI.DATA.reg, // Dest (SPI data register)
    0,                              // Count (set later)
    DMA_BEAT_SIZE_BYTE,             // Bytes/hwords/words
    true,                           // Increment source address
    false);                         // Don't increment dest address

  NVIC_EnableIRQ(DMAC_IRQn); 

  if (ctrl_cs && TFT_CS >= 0)
  {
    pinMode(TFT_CS, OUTPUT);
    digitalWrite(TFT_CS, HIGH);
  }

  DMA_Enabled = true;
  spiBusyCheck = false;
  return true;
}

void TFT_eSPI::deInitDMA(void)
{
  if (!DMA_Enabled) return;
  zDMA.free();
  DMA_Enabled = false;
  spiBusyCheck = false; // 确保清理状态
}

bool TFT_eSPI::dmaBusy(void) {
  bool isActive = zDMA.isActive();
  if (!isActive) {
    spiBusyCheck = false;
  }
  return  spiBusyCheck;
}

void TFT_eSPI::pushPixelsDMA(uint16_t *image, uint32_t len)
{
  if ((len == 0) || (!DMA_Enabled)) return;
  
  if(_swapBytes) {
    for (uint32_t i = 0; i < len; i++) (image[i] = image[i] << 8 | image[i] >> 8);
  }
  dmaWait();
  zDMA.changeDescriptor(desc, image, (void *)&SERCOM0->SPI.DATA.reg, len * 2);
  stat = zDMA.startJob();
  spiBusyCheck = true;
}

void TFT_eSPI::pushImageDMA(int32_t x, int32_t y, int32_t w, int32_t h, uint16_t* image, uint16_t* buffer) 
{
  
  if ((x >= _vpW) || (y >= _vpH)) return;

  int32_t dx = 0;
  int32_t dy = 0;
  int32_t dw = w;
  int32_t dh = h;

  if (x < _vpX) { dx = _vpX - x; dw -= dx; x = _vpX; }
  if (y < _vpY) { dy = _vpY - y; dh -= dy; y = _vpY; }

  if ((x + dw) > _vpW ) dw = _vpW - x;
  if ((y + dh) > _vpH ) dh = _vpH - y;

  if (dw < 1 || dh < 1) return;

  uint32_t len = dw*dh;
  if (buffer == nullptr) {
    buffer = image;
  }

  // If image is clipped, copy pixels into a contiguous block
  if ( (dw != w) || (dh != h) ) {
    if(_swapBytes) {
      for (int32_t yb = 0; yb < dh; yb++) {
        for (int32_t xb = 0; xb < dw; xb++) {
          uint32_t src = xb + dx + w * (yb + dy);
          (buffer[xb + yb * dw] = image[src] << 8 | image[src] >> 8);
        }
      }
    }
    else {
      for (int32_t yb = 0; yb < dh; yb++) {
        memcpy((uint8_t*) (buffer + yb * dw), (uint8_t*) (image + dx + w * (yb + dy)), dw << 1);
      }
    }
  }
  // else, if a buffer pointer has been provided copy whole image to the buffer
  else if (buffer != image || _swapBytes) {
    if(_swapBytes) {
      for (uint32_t i = 0; i < len; i++) (buffer[i] = image[i] << 8 | image[i] >> 8);
    }
    else {
      memcpy(buffer, image, len*2);
    }
  }
  setWindow(x, y, x + dw - 1, y + dh - 1);
  
  const uint32_t DMA_MAX_TX_SIZE = 0x7fff;
  while(len > DMA_MAX_TX_SIZE) {
    dmaWait();
    zDMA.changeDescriptor(desc, buffer, (void *)&SERCOM0->SPI.DATA.reg, DMA_MAX_TX_SIZE * 2);
    stat = zDMA.startJob();
    spiBusyCheck = true;
    len -= DMA_MAX_TX_SIZE; 
    buffer += DMA_MAX_TX_SIZE;
  }
  
  dmaWait();
  zDMA.changeDescriptor(desc, buffer, (void *)&SERCOM0->SPI.DATA.reg, len * 2);
  stat=zDMA.startJob();
  spiBusyCheck = true;
}
